syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/stnokott/spacetrader/internal/proto";

package proto;

service SpaceTradersService {
	rpc Ping(google.protobuf.Empty) returns (google.protobuf.Empty);
	rpc GetServerStatus(google.protobuf.Empty) returns (ServerStatus);
	rpc GetCurrentAgent(google.protobuf.Empty) returns (Agent);
}

message ServerStatus {
	string version = 1;
	google.protobuf.Timestamp last_reset = 2;
	google.protobuf.Timestamp next_reset = 3;

	message GlobalStats {
		int64 agents = 1;
		int64 ships = 2;
		int64 waypoints = 3;
		int64 systems = 4;
	}
	
	message Announcement {
		string title = 1;
		string body = 2;
	}

	GlobalStats global_stats = 4;
	repeated Announcement announcements = 5;
}

message Agent {
	string name = 1;
	int64 credits = 2;
	string headquarters = 3;
	int64 shipCount = 4;
}
